<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AC Bridge</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="settings">Settings</string>
    <string name="service_status">Service Status</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="device_address">Bridge Address (for SmartThings)</string>
    <string name="address_unavailable">Not connected to Wi-Fi</string>
</resources>
